# baseline-correction

./: 404.html  README.md  bline_correction.html  index.html  main.py  mkdocs.yml  notebook.ipynb  objects.inv  pyproject.toml  readme.html  readme.org
bline_correction/: __init__.py  arpls_bline.py
docs/: index.md
images/: notebook.css
tests/: __init__.py
