[tool.poetry]
name = "bline-correction"
version = "0.1.0"
description = ""
authors = ["Jishnu <rjishnu55@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
scienceplots = "^2.1.1"
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}
mkdocs-material = "^9.5.36"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
